chore(dev env): :wrench: gitignore put negations last
Negations need to go last in gitignore file in order so it is correctly parsed

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
 
 # Local History for Visual Studio Code
 .history/
@@ -23,3 +18,10 @@ settings.json
 
 # Generated qr code
 qr.png
+
+# Negations last
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
