build: :hammer: Simplify python requirements
Simplify requirements.txt file by separating to dev and non-dev dependencies with inheritance

--- a/requirements-raspberry-pi.txt
+++ b/requirements-raspberry-pi.txt
@@ -1,14 +1,4 @@
+-r requirements.txt
 
-kivy[base]
-kivy_examples
-numpy
-pytest
-black
-pylint
-pre-commit
-matplotlib
-numpy
-pillow
-qrcode
 spidev
 mfrc522
