chore: :wrench: configure vscode for pytest
Configure vscode workspace settings to use pytest

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "conventionalCommits.scopes": [
         "dev env"
-    ]
+    ],
+    "python.testing.pytestArgs": [
+        "GuiApp/tests"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
