chore: :wrench: migrate launch.json pytest to settings.json
Since VS Code has support for pytest, move launch configurations and respective args to workspace settings file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
         "dev env"
     ],
     "python.testing.pytestArgs": [
-        "GuiApp/tests"
+        "GuiApp/tests",
+        "-rP" // Show output for passed tests
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true
