--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -19,6 +19,9 @@
         "github.vscode-pull-request-github",
         "github.vscode-github-actions",
         "bierner.github-markdown-preview",
+
+        // kivy
+        "battlebas.kivy-vscode",
         
         // misc
         "vivaxy.vscode-conventional-commits",
