chore(dev env): :wrench: add scope to vscode settings
Add scope "app" to VS Code settings for conventional commits

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "conventionalCommits.scopes": [
-        "dev env"
+        "dev env",
+        "app"
     ],
     "python.testing.pytestArgs": [
         "GuiApp/tests",
