--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,15 @@
-# Auto detect text files and perform LF normalization
+# https://docs.github.com/en/get-started/git-basics/configuring-git-to-handle-line-endings
+
+# Set the default behavior, in case people don't have core.autocrlf set.
 * text=auto
+
+# Set all linux shell scripts to LF
+*.sh text eol=lf
+
+# Set all windows shell scripts to CRLF
+*.bat text eol=crlf
+*.ps1 text eol=crlf
+
+# Denote all files that are truly binary and should not be modified.
+*.png binary
+*.jpg binary
