refactor(app): :art: Make database class and ability to specify database and settings location
- Removed direct database function calls in various widget files and replaced them with calls to self.manager.database. - Deleted test_create_user_screen.py as it was no longer needed. - Added new test_create_user.py to cover user creation functionality with async tests. - Updated requirements-dev.txt to include pytest-cov and pytest-asyncio for improved testing capabilities. - Created __init__.py in GuiApp directory to facilitate package imports.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,7 @@
     ],
 
     "python.testing.pytestArgs": [
-        "GuiApp/tests",
-        "-rP" // Show output for passed tests
+        "."
     ],
 
     "python.testing.unittestEnabled": false,
@@ -20,5 +19,15 @@
         },
     },
     
-    "isort.args":["--profile", "black"],
+    "isort.args": [
+        "--profile",
+        "black"
+    ],
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        ".",
+        "-p",
+        "test_*.py"
+    ],
 }
