style(test): :art: Remove unused classes in pytest

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "conventionalCommits.scopes": [
         "dev env",
-        "app"
+        "app",
+        "test"
     ],
 
     "python.testing.pytestArgs": [
