chore: Code improvements and fixes
Includes various code improvements:
- Updated test configurations
- Profile screen improvements
- Create user screen updates
- Custom screen manager enhancements
- Main user screen improvements
- Settings manager updates
- Splash screen refinements
- Top up payment screen updates
- Navigation header improvements
- README updates
- Workflow and gitignore updates

--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,14 @@ venv/
 database.db
 settings.json
 
-# Generated qr code
+# Generated files
 qr.png
+*.png
+!GuiApp/Images/*.png
+
+# Test outputs
+test_output.txt
+*Screen*.png
 
 # Negations last
 !.vscode/settings.json
