--- a/.github/workflows/VisualDiff.yml
+++ b/.github/workflows/VisualDiff.yml
@@ -27,7 +27,7 @@ jobs:
           - name: Set up Python
             uses: actions/setup-python@v4
             with:
-                python-version: 3.9
+                python-version: '3.13'
 
           - name: Install requirements
             run: |
@@ -58,7 +58,7 @@ jobs:
           - name: Set up Python
             uses: actions/setup-python@v4
             with:
-                python-version: 3.9
+                python-version: '3.13'
 
           - name: Install requirements
             run: |
@@ -116,9 +116,9 @@ jobs:
                 python .github/workflows/scripts/diffImages.py preImages/ postImages/
                 if [ ! -d diff_images ]; then
                     echo "No differences found."
-                    echo "::set-output name=has_diffs::false" 
+                    echo "has_diffs=false" >> $GITHUB_OUTPUT
                 else
-                    echo "::set-output name=has_diffs::true" 
+                    echo "has_diffs=true" >> $GITHUB_OUTPUT
                 fi
 
           - name: Save images
